src/tests/fixtures/comments/invalidTagInLinecomment.ts.expected
-----------------
INPUT
----------------- 
// @gqlTyp
export default class Composer {
  url(): string {
    return `/composer/`;
  }
}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/comments/invalidTagInLinecomment.ts:1:4 - error: `@gqlTyp` is not a valid Grats tag. Valid tags are: `@gqlType`, `@gqlField`, `@gqlScalar`, `@gqlInterface`, `@gqlEnum`, `@gqlUnion`, `@gqlInput`.

1 // @gqlTyp
     ~~~~~~~
src/tests/fixtures/comments/invalidTagInLinecomment.ts:1:4 - error: Unexpected Grats tag in line (`//`) comment. Grats looks for tags in JSDoc-style block comments. e.g. `/** @gqlType */`. For more information see: https://grats.capt.dev/docs/getting-started/comment-syntax

1 // @gqlTyp
     ~~~~~~~


-- Code Action: "Convert to a docblock comment" (convert-line-comment-to-docblock-comment) --
- Original
+ Fixed

@@ -1,2 +1,2 @@
- // @gqlTyp
+ /** @gqlTyp */
  export default class Composer {